<resources>
    <string name="app_name">AnimationExample</string>
    <string name="view_animation">View Animation</string>
    <string name="drawable_animation">Drawable Animation</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="value_animator">Value animator</string>
    <string name="value_animation">value animation</string>
    <string name="object_animator">Object Animator</string>
    <string name="customview_animation">CustomView Animation</string>
    <string name="transition_animations">Transition Animations</string>
    <string name="forward">Forward</string>
    <string name="second_scene">Second Scene</string>
    <string name="element_transition">Element Transition</string>
    <string name="back">back</string>
    <string name="transition_string">ball</string>

</resources>
