<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="Animation Examples"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"/>
    <Button
        android:id="@+id/button_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Drawable animation"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/button_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_animation"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/button_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_animation"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/button_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/object_animator"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/button_customview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customview_animation"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"/>
        <Button
            android:id="@+id/button_transition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transition_animations"
            android:layout_margin="@dimen/margin"
            android:layout_gravity="center"/>
    <Button
        android:id="@+id/button_elem_transition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Element Transition!"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>