<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/drawable_animation"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorPrimary"/>
    <Button
        android:id="@+id/drawable_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/drawable_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        />
    <ImageView
        android:id="@+id/drawable_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        />
</LinearLayout>